fix font-awesome icons not aligned

--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
   --black: #000000;
 }
 
+.fas::before {
+  padding-left: 1px;
+}
+
 body {
   margin: 0;
   font-family: Raleway;
